--- a/src/lib/styles/style.css
+++ b/src/lib/styles/style.css
@@ -3,3 +3,7 @@
   width: 0px;
   background: white; /* make scrollbar transparent */
 }
+
+@tailwind base;
+@tailwind components;
+@tailwind utilities;
